--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script>
 <![endif]-->
-
+<!--[if lte IE 9]><script src="js/browser-update.js"></script>
+<![endif]-->
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>&#032;My Resume</title>
-  
   
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="css/custom.css">
@@ -20,7 +20,7 @@
 <div>
  
   <!-- Main Page Content and Sidebar -->
-<div class="firstWrapper">
+<div id="top" class="firstWrapper">
  <div class="firstDivUnder">
  	<div class="firstDiv">
  		<img src="img/Coder.jpg" alt="" class="bgwidth" />
@@ -43,14 +43,16 @@
 
   <section class="top-bar-section">
     <!-- Right Nav Section -->
-    <ul class="center">
-      <li><a href="#">Right Button</a></li>
+    <ul id="top-menu" class="center">
+      <li><a href="#top">Top</a></li>
+      <li class="active"><a href="#about">About me</a></li>
+      <li><a href="#footer">Contact me</a></li>
     </ul>
 
-    <!-- Left Nav Section -->
+    <!-- Left Nav Section 
     <ul class="center">
       <li><a href="#">Left Nav Button</a></li>
-    </ul>
+    </ul>-->
   </section>
 </nav>
 
@@ -61,7 +63,7 @@
   <div class="row">
  
     <!-- Main Content -->
-    <div class="large-9 columns" role="content">
+    <div id="about" class="large-9 columns" role="content">
  
  <h1 class="customHeadTitlesSpacing">About me <small>A small introduction</small></h1>
       <hr />
@@ -121,7 +123,7 @@
  
   <!-- Footer -->
   
-<div class="footerDivUnder">
+<div id="footer" class="footerDivUnder">
 <div id="stop" class="footerDiv">
  
  <div class="row">
@@ -188,17 +190,17 @@
   <script src="js/foundation.min.js"></script>
   <script src="js/foundation/foundation.topbar.js"></script>
   <script src="js/back-to-top.js"></script>
+  <script src="js/ddscrollspy.js"></script>
   <script src="js/browser-update.js"></script>
   
     <!-- Sticky div script -->
-
 	<script type="text/javascript">
 		$(function() {
 			$('#sticky').stickyBar({animated:true, until:"#stop", top:35});
 		});
 	</script>
+	<!-- End of Sticky div script -->
 
-<!-- End of Sticky div script -->
     <script>
       $(document).foundation();
     </script>
