Skills div with images.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <ul id="top-menu" class="center">
       <li><a href="#top">Top</a></li>
       <li><a href="#about">About me</a></li>
-      <li><a href="#skills">Skills</a></li>
       <li><a href="#experience">Experience</a></li>
+      <li><a href="#skills">Skills</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#footer">Contact me</a></li>
     </ul>
@@ -87,9 +87,9 @@
 	</div>
 </div>
 
-<div class="row" id="skills">
+<div class="row" id="experience">
 	<div class="large-12 columns customHeadTitlesSpacing" role="content">	
-		<h2 class="customHeadTitlesSpacing">Skills <small>What I am good at</small></h2>
+		<h2 class="customHeadTitlesSpacing">Experience <small> My Professional Development</small></h2>
 			<hr />
 				<ul class="customSpacing">
 					<li>Web Developer with 10+ years of experience.</li>
@@ -104,43 +104,77 @@
 </div>
 
 <div class="darkBlueDiv" id="stop">
-	<div class="row" id="experience">
-		<div class="large-12 columns">
-			<h2 class="customHeadTitlesSpacing">Experience <small class="whiteTextColor">A small introduction</small></h2>
-			<div class="large-4 columns noPadding">
-				<div class="box">
-					<div class="cover top-left">
-						<h2 class="title">Example Post Title</h2>
-							<p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quis enim nam dolorem recusandae ducimus laudantium iure sint similique reiciendis quaerat dolorum cum aliquid officiis repudiandae in qui itaque maiores!</p>
-								<div class="btn"><a href="#">Read more...</a>
-								</div>
-									<p class="date">10/19/2013</p>
-					</div>
-				</div>
-			</div>
+	<div class="row" id="skills">
+		
+		<div class="large-12 columns customHeadTitlesSpacing">
+			<h2 class="customHeadTitlesSpacing">Skills <small class="whiteTextColor"> What I am good at</small></h2>
+			
 			<div class="large-4 columns noPadding center">
-				<div class="box">
-					<div class="cover top">
-						<h2 class="title">Example Post Title</h2>
-							<p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quis enim nam dolorem recusandae ducimus laudantium iure sint similique reiciendis quaerat dolorum cum aliquid officiis repudiandae in qui itaque maiores!</p>
-								<div class="btn"><a href="http://placekitten.com/250/200">Read more...</a>
-								</div>
-									<p class="date">10/19/2013</p>
-					</div>
+				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/htmlBadgeSmall.png" alt="HTML5 Logo" /></a>
+				<div id="myModal" class="reveal-modal" data-reveal>
+					<h2>Awesome. I have it.</h2>
+					<p class="lead">Your couch.  It is mine.</p>
+					<p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+					<a class="close-reveal-modal">&#215;</a>
 				</div>
 			</div>
-			<div class="large-4 columns noPadding">
-				<div class="box">
-					<div class="cover top-right">
-						<h2 class="title">Example Post Title</h2>
-							<p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quis enim nam dolorem recusandae ducimus laudantium iure sint similique reiciendis quaerat dolorum cum aliquid officiis repudiandae in qui itaque maiores!</p>
-								<div class="btn"><a href="#">Read more...</a>
-								</div>
-									<p class="date">10/19/2013</p>
-					</div>
+			
+			<div class="large-4 columns noPadding center">
+				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/cssBadgeSmall.png" alt="CSS Logo" /></a>
+				<div id="myModal" class="reveal-modal" data-reveal>
+					<h2>Awesome. I have it.</h2>
+					<p class="lead">Your couch.  It is mine.</p>
+					<p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+					<a class="close-reveal-modal">&#215;</a>
 				</div>
 			</div>
+
+			<div class="large-4 columns noPadding center">
+				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/jsBadgeSmall.png" alt="javascript Logo" /></a>
+				<div id="myModal" class="reveal-modal" data-reveal>
+					<h2>Awesome. I have it.</h2>
+					<p class="lead">Your couch.  It is mine.</p>
+					<p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+					<a class="close-reveal-modal">&#215;</a>
+				</div>
+			</div>
+			
 		</div>
+		
+		<div class="large-12 columns customHeadTitlesSpacing">
+			
+			<div class="large-4 columns noPadding center" style="top:37px;">
+				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/php-logo-small.png" alt="PHP Logo" /></a>
+				<div id="myModal" class="reveal-modal" data-reveal>
+					<h2>Awesome. I have it.</h2>
+					<p class="lead">Your couch.  It is mine.</p>
+					<p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+					<a class="close-reveal-modal">&#215;</a>
+				</div>
+			</div>
+			
+			<div class="large-4 columns noPadding center">
+				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/xcode-icon-small.png" alt="XCode Logo" /></a>
+				<div id="myModal" class="reveal-modal" data-reveal>
+					<h2>Awesome. I have it.</h2>
+					<p class="lead">Your couch.  It is mine.</p>
+					<p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+					<a class="close-reveal-modal">&#215;</a>
+				</div>
+			</div>
+
+			<div class="large-4 columns noPadding center">
+				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/photoshop-icon-small.png" alt="Photoshop Logo" /></a>
+				<div id="myModal" class="reveal-modal" data-reveal>
+					<h2>Awesome. I have it.</h2>
+					<p class="lead">Your couch.  It is mine.</p>
+					<p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+					<a class="close-reveal-modal">&#215;</a>
+				</div>
+			</div>
+			
+		</div>
+		
 	</div>
 </div>
 
@@ -149,15 +183,15 @@
 
 <div class="row" id="education">
 	<div class="large-12 columns">
-		<h2 class="customHeadTitlesSpacing">Education <small>A small introduction</small></h2>
-			<hr />
+		<h2 class="customHeadTitlesSpacing">Education <small> What I've learned</small></h2>
+			
 	</div>
 </div>
 
 <div class="lightBlueDiv">
 	<div class="row" id="footer">
 		<div class="large-12 columns">
-			<h2 class="customHeadTitlesSpacing">Contact me <small>A small introduction</small></h2>
+			<h2 class="customHeadTitlesSpacing">Contact me <small> Shoot me an email!</small></h2>
 		</div>
 	</div>
 </div>
@@ -170,7 +204,7 @@
       <div class="row">
         <div class="large-6 columns">
           <a href="http://Speedcommerce.com" target="_blank"><img src="img/scwhiteSmall.png" alt="Speedcommerce logo" height="43" width="100" /></a>
-          <p class="copyright">&copy; Copyright Speed Commerce 2013 - 2014.</p>
+          <p class="copyright">&copy; Copyright MARAI - 2014.</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
