Mobile menu not implemented.  Needs further investigation.

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
   <!-- End Nav -->
 
 <div class="row" id="about">
-	<div class="large-12 columns">
+	<div class="large-12 columns extra-padding">
 		<div class="large-9 columns noPadding" role="content">
-			<h2 class="customFirstHeadTitlesSpacing">About me <small>A small introduction</small></h2>
+			<h2 class="customFirstHeadTitlesSpacing">About me <small class="smallSpace">A small introduction</small></h2>
 			<hr />
 			<article class="customSpacing">
 			<h4 class="niceBlueTextColor">Taking care of the smallest details —methodically— is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</h4>
 			</article>
 		</div>
-		<div class="large-3 columns">
+		<div class="large-3 columns tablet-hidden">
 			<p><img class="imgCircle" src="img/profile.png" width="250" height="188" alt="Profile Picture"/></p>
 		</div>
 		<!--
@@ -88,8 +88,8 @@
 </div>
 
 <div class="row" id="experience">
-	<div class="large-12 columns customHeadTitlesSpacing" role="content">	
-		<h2 class="customHeadTitlesSpacing">Experience <small> My Professional Development</small></h2>
+	<div class="large-12 columns extra-padding" role="content">	
+		<h2 class="customHeadTitlesSpacing">Experience <small class="smallSpace"> My Professional Development</small></h2>
 			<hr />
 				<ul class="customSpacing">
 					<li>Web Developer with 10+ years of experience.</li>
@@ -103,13 +103,13 @@
 	</div>
 </div>
 
-<div class="darkBlueDiv" id="stop">
+<div id="stop">
 	<div class="row" id="skills">
 		
-		<div class="large-12 columns customHeadTitlesSpacing">
-			<h2 class="customHeadTitlesSpacing">Skills <small class="whiteTextColor"> What I am good at</small></h2>
+		<div class="large-12 columns extra-padding">
+			<h2 class="customHeadTitlesSpacing">Skills <small class="smallSpace"> What I am good at</small></h2>
 			
-			<div class="large-4 columns noPadding center">
+			<div class="large-4 columns noPadding center padding-mobile">
 				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/htmlBadgeSmall.png" alt="HTML5 Logo" /></a>
 				<div id="myModal" class="reveal-modal" data-reveal>
 					<h2>Awesome. I have it.</h2>
@@ -119,7 +119,7 @@
 				</div>
 			</div>
 			
-			<div class="large-4 columns noPadding center">
+			<div class="large-4 columns noPadding center padding-mobile">
 				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/cssBadgeSmall.png" alt="CSS Logo" /></a>
 				<div id="myModal" class="reveal-modal" data-reveal>
 					<h2>Awesome. I have it.</h2>
@@ -129,7 +129,7 @@
 				</div>
 			</div>
 
-			<div class="large-4 columns noPadding center">
+			<div class="large-4 columns noPadding center padding-mobile">
 				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/jsBadgeSmall.png" alt="javascript Logo" /></a>
 				<div id="myModal" class="reveal-modal" data-reveal>
 					<h2>Awesome. I have it.</h2>
@@ -140,10 +140,10 @@
 			</div>
 			
 		</div>
-		
+		<!--
 		<div class="large-12 columns customHeadTitlesSpacing">
 			
-			<div class="large-4 columns noPadding center" style="top:37px;">
+			<div class="large-4 columns noPadding center padding-mobile" style="top:37px;">
 				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/php-logo-small.png" alt="PHP Logo" /></a>
 				<div id="myModal" class="reveal-modal" data-reveal>
 					<h2>Awesome. I have it.</h2>
@@ -153,7 +153,7 @@
 				</div>
 			</div>
 			
-			<div class="large-4 columns noPadding center">
+			<div class="large-4 columns noPadding center padding-mobile">
 				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/xcode-icon-small.png" alt="XCode Logo" /></a>
 				<div id="myModal" class="reveal-modal" data-reveal>
 					<h2>Awesome. I have it.</h2>
@@ -163,7 +163,7 @@
 				</div>
 			</div>
 
-			<div class="large-4 columns noPadding center">
+			<div class="large-4 columns noPadding center padding-mobile">
 				<a href="#" data-reveal-id="myModal" data-reveal><img src="img/photoshop-icon-small.png" alt="Photoshop Logo" /></a>
 				<div id="myModal" class="reveal-modal" data-reveal>
 					<h2>Awesome. I have it.</h2>
@@ -174,24 +174,25 @@
 			</div>
 			
 		</div>
-		
+		-->
 	</div>
 </div>
 
 
 			
-
-<div class="row" id="education">
-	<div class="large-12 columns">
-		<h2 class="customHeadTitlesSpacing">Education <small> What I've learned</small></h2>
-			
-	</div>
-</div>
-
 <div class="lightBlueDiv">
+	<div class="row" id="education">
+		<div class="large-12 columns extra-padding">
+			<h2 class="customHeadTitlesSpacing">Education <small class="smallSpace"> What I've learned</small></h2>
+			
+		</div>
+	</div>
+</div>
+
+<div class="darkBlueDiv">
 	<div class="row" id="footer">
-		<div class="large-12 columns">
-			<h2 class="customHeadTitlesSpacing">Contact me <small> Shoot me an email!</small></h2>
+		<div class="large-12 columns extra-padding">
+			<h2 class="customHeadTitlesSpacing">Contact me <small class="whiteTextColor smallSpace"> Shoot me an email!</small></h2>
 		</div>
 	</div>
 </div>
