Major progress.  Added social icons and slider Timeline js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="top" class="firstWrapper">
  <div class="firstDivUnder">
  	<div class="firstDiv">
- 		<img src="img/Coder.jpg" alt="" class="bgwidth" />
+ 		<img src="img/bg3-1.jpg" alt="" class="bgwidth" />
   	</div>
   	<div class="bannerText container">
 	  	<h1 class="whiteTextColor h-titles-to-margin">Miguel Angel Rodríguez Alvarez Icaza</h1>
@@ -48,7 +48,7 @@
       <li><a href="#about">About me</a></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#skills">Skills</a></li>
-      <li><a href="#education">Education</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#footer">Contact me</a></li>
     </ul>
 
@@ -87,20 +87,25 @@
 	</div>
 </div>
 
+<div class="expDiv">
 <div class="row" id="experience">
 	<div class="large-12 columns extra-padding" role="content">	
 		<h2 class="customHeadTitlesSpacing">Experience <small class="smallSpace"> My Professional Development</small></h2>
 			<hr />
-				<ul class="customSpacing">
-					<li>Web Developer with 10+ years of experience.</li>
-					<li>Experienced Project Manager.</li>
-					<li>HTML5, CSS, Javascript, jQuery, Objective-C and Photoshop skills.</li>
-					<li>Over 13 years of management experience.</li>
-					<li>iOS Developer with over 6 000 downloads to date.</li>
-					<li>More than 7 years of experience in the Automotive Industry.</li>
-					<li>Experienced Quality Assurance Manager and certified Six Sigma Green Belt.</li>
+				<iframe src='http://cdn.knightlab.com/libs/timeline/latest/embed/index.html?source=0Are-WIH1CahbdFJwM2ZmQTJpSTJxTzNRRHRiNDhwcXc&font=DroidSerif-DroidSans&maptype=toner&lang=en&start_at_end=true&height=500' width='100%' height='500' frameborder='0'></iframe>
+	</div>
+	<div class="small-11 small-centered columns">
+		<ul>
+					<li>&#8226; Web Developer with 10+ years of experience.</li>
+					<li>&#8226; Experienced Project Manager.</li>
+					<li>&#8226; HTML5, CSS, Javascript, jQuery, Objective-C and Photoshop skills.</li>
+					<li>&#8226; Over 13 years of management experience.</li>
+					<li>&#8226; iOS Developer with over 6 000 downloads to date.</li>
+					<li>&#8226; More than 7 years of experience in the Automotive Industry.</li>
+					<li>&#8226; Experienced Quality Assurance Manager and certified Six Sigma Green Belt.</li>
 				</ul>
 	</div>
+</div>
 </div>
 
 <div id="stop">
@@ -181,9 +186,9 @@
 
 			
 <div class="lightBlueDiv">
-	<div class="row" id="education">
+	<div class="row" id="portfolio">
 		<div class="large-12 columns extra-padding">
-			<h2 class="customHeadTitlesSpacing">Education <small class="smallSpace"> What I've learned</small></h2>
+			<h2 class="customHeadTitlesSpacing">Portfolio <small class="smallSpace whiteTextColor"> A sample of my work</small></h2>
 			
 		</div>
 	</div>
@@ -203,14 +208,14 @@
   <footer class="large-12 columns bottomFooter">
     <div class="large-12 columns">
       <div class="row">
-        <div class="large-6 columns">
-          <a href="http://Speedcommerce.com" target="_blank"><img src="img/scwhiteSmall.png" alt="Speedcommerce logo" height="43" width="100" /></a>
-          <p class="copyright">&copy; Copyright MARAI - 2014.</p>
-        </div>
-        <div class="large-6 columns">
-          <ul class="inline-list right">
-            <li><a href="#">Back to top</a></li>
-          </ul>
+        <div class="small-11 small-centered columns">
+          	<ul class="inline-list">
+			  	<li><a href="#"><img src="img/64-linkedin.png" alt="Linkedin" /></a></li>
+			  	<li><a href="#"><img src="img/64-googleplus.png" alt="Google Plus" /></a></li>
+			  	<li><a href="#"><img src="img/64-twitter.png" alt="Twitter" /></a></li>
+			  	<li><a href="#"><img src="img/64-facebook.png" alt="Facebook" /></a></li>
+			  	<li><a href="#"><img src="img/64-skype.png" alt="Skype" /></a></li>
+			</ul>
         </div>
       </div>
     </div>
