Send button change to SEND MESSAGE

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 							<input type="hidden" value="send-mail.php" name="sendMailUrl" id="sendMailUrl" />
 							<!-- ENDS send mail configuration -->
 							
-							<p><input class="button [radius round]" type="button" value="Send" name="submit" id="submit" /></p>
+							<p><input class="button [radius round]" type="button" value="Send message" name="submit" id="submit" /></p>
 						</fieldset>
 						
 					</form>
