--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script>
 <![endif]-->
-<!--[if lte IE 9]><script src="js/browser-update.js"></script>
+<!--[if lte IE 9]><script src="js/browser-update.min.js"></script>
 <![endif]-->
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta  name="robots" content="INDEX, FOLLOW">
+  <meta name="description" content="User Interface Manager. User Experience Designer and Developer. iOS Developer.">
   <title>&#032;My Resume</title>
   
   <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/custom.min.css">
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
   
@@ -421,7 +423,7 @@
   <script src="js/back-to-top.min.js"></script>
   <script src="js/ddscrollspy.min.js"></script>
   <script src="js/browser-update.min.js"></script>
-  <script src="js/custom.js"></script>
+  <script src="js/custom.min.js"></script>
   <script src="js/jquery.easing.min.js"></script>
   <script src="js/jquery.easypiechart.min.js"></script>
   <script src="js/form-validation.min.js"></script>
@@ -439,5 +441,15 @@
     <script>
       $(document).foundation();
     </script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49096652-1', 'mikerai.com');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </html>
