--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   	</div>
   	<div class="bannerText container">
 	  	<h1 class="whiteTextColor h-titles-to-margin">Miguel Angel Rodríguez Alvarez Icaza</h1>
-	  	<h3 class="whiteTextColor h-titles-to-margin">UI Manager &#038; UX Developer</h2>
+	  	<h3 class="whiteTextColor h-titles-to-margin">UX Manager &#038; iOS Developer</h2>
   	</div>
  </div>
 </div> 
@@ -172,17 +172,18 @@
 		
 		<div class="large-6 columns bigBorder">
 			<ul>
+				<li> UX Manager.</li>
 				<li> Web Developer with 10+ years of experience.</li>
 				<li> Responsive Web Design &#040;RWD&#041; Expert.</li>
 				<li> HTML5, CSS and Javascript professional skills.</li>
 				<li> iOS Developer with over 10 000 downloads to date.</li>
-				<li> Photoshop and Graphic Design knowledge.</li>
 				<li> User Experience focused developer.</li>
 			</ul>
 		</div>
 		
 		<div class="large-6 columns bigBorder">
 			<ul>
+				<li> Photoshop and Graphic Design knowledge.</li>
 				<li> E-commerce expert.</li>
 				<li> ADA and SEO knowledge.</li>
 				<li> Qualified Project Manager.</li>
@@ -382,7 +383,7 @@
 							<div class="name-field">	
 								<label class="whiteTextColor">Name</label>
 								<input required pattern="[a-zA-Z]+" name="name"  id="name" type="text" title="Your name" placeholder="Your name" />
-								<small class="error">Name is required and must be a string.</small>
+								<small class="error">Name is required.</small>
 							</div>
 							
 							<div class="email-field">
