Added button for downloadable resume

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>&#032;My Resume</title>
   
   <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/custom.min.css">
+  <link rel="stylesheet" href="css/custom.css">
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
   
@@ -106,8 +106,9 @@
 			<h2 class="customFirstHeadTitlesSpacing">About me <small class="smallSpace">A small introduction</small></h2>
 			<hr />
 			<article class="customSpacing">
-			<h4 class="niceBlueTextColor">Taking care of the smallest details —methodically— is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</h4>
+				<h4 class="niceBlueTextColor">Taking care of the smallest details —methodically— is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</h4>
 			</article>
+			<p class="center"><input class="button-1" type="button" value="Download printable Resume" onClick="window.open('http://mikerai.com/Resume.pdf')" /></p>
 		</div>
 		<div class="large-5 columns tablet-hidden center">
 			<p><img class="imgCircle" src="img/profile2.jpg" width="294" height="294" alt="Profile Picture"/></p>
