--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>&#032;My Resume</title>
   
   <link rel="stylesheet" href="css/foundation.min.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/custom.min.css">
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
   
