--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><script src="js/html5shiv.min.js"></script>
-<![endif]-->
-<!--[if lte IE 9]><script src="js/browser-update.min.js"></script>
-<![endif]-->
 <head>
 
   <meta charset="utf-8">
@@ -444,7 +440,8 @@
 	 	</div>
 	 </div>
 </div>
-    
+<!--[if lt IE 9]><script src="js/html5shiv.min.js"></script><![endif]-->
+<!--[if lte IE 9]><script src="js/browser-update.min.js"></script><![endif]-->  
   <script src="js/vendor/jquery2.03.min.js"></script>
   <script src="js/vendor/modernizr2.7.1.min.js"></script>
   
