--- a/new_look/Video Background Version/HTML Files/index_es.html
+++ b/new_look/Video Background Version/HTML Files/index_es.html
@@ -34,7 +34,7 @@
 <div id="socialsection">
 
     <!-- You MUST add the URL's for your account at each social network in the code below to swap out the hash # tag -->
-    <div id="social-left">
+    <div id="social-left" class="sp">
         <a href="https://itunes.apple.com/mx/artist/phiveleven-llc-mikerai/id461579017?l=en"><i class="icon-appstore" target="_blank"></i></a>
         <a href="https://www.facebook.com/mike.rai1" target="_blank"><i class="icon-facebook"></i></a>
         <a href="https://plus.google.com/u/2/+MiguelAngelRodríguezAlvarezIcaza/posts/" target="_blank"><i class="icon-gplus"></i></a>
@@ -44,7 +44,7 @@
     <div id="social-button"></div>
     
     <!-- You MUST change the URL definition in these links to share YOUR page - simply change the URL -->
-    <div id="social-right">
+    <div id="social-right" class="sp">
         <a href="http://www.facebook.com/share.php?u=http://mikerai.com"  target="_blank"><i class="icon-facebook"></i></a>
         <a href="https://plus.google.com/share?url=http://mikerai.com" target="_blank"><i class="icon-gplus"></i></a>
         <a href="http://pinterest.com/pin/create/button/?url=http://mikerai.com" target="_blank"><i class="icon-pinterest"></i></a>
