Better background image. Still not convinced 100% about parallax 1 for mobile

--- a/new_look/Video Background Version/HTML Files/index.html
+++ b/new_look/Video Background Version/HTML Files/index.html
@@ -121,8 +121,8 @@
 
     </div><!-- End of Scroll Down Message and animation -->
 
-    <!-- Start of Shade - this is the css based gradient over the image for that cool effect -->
-    <div class="shade"></div><!-- End of Shade -->
+    <!-- Start of Shade - this is the css based gradient over the image for that cool effect add class="shade" to div-->
+    <div></div><!-- End of Shade -->
 
     <!-- Start of Background - displays a static image in replacement of video when on tablets and mobile devices -->
     <div id="background"></div><!-- End of Background -->
@@ -400,7 +400,7 @@
                 <h2 class="border wow fadeInRightBig" data-wow-offset="80" data-wow-duration="2s">iOS Portfolio</h2>
                 <p>Certified <a target="_blank" href="http://mikerai.com/iOS5Certificate.pdf">iOS Developer</a> accumulating 15 000+ downloads to date.</p>
                 <p>Contact me to talk about your ideas and to see how I can help you to turn them into an iOS app.</p>
-                <p><a href="https://itunes.apple.com/us/artist/phiveleven-llc-mikerai/id461579017?l=en"><img class="w100" src="img/appStoreBig2.png" alt="Apple App Store"></a></p>
+                <p><a href="https://itunes.apple.com/us/artist/phiveleven-llc-mikerai/id461579017?l=en"><img class="wh100"  src="img/appStoreBig2.png" width="320" height="95" alt="Apple App Store"></a></p>
             
                 <div class="center-align">
 
