--- a/new_look/Video Background Version/HTML Files/index_es.html
+++ b/new_look/Video Background Version/HTML Files/index_es.html
@@ -121,8 +121,8 @@
 
     </div><!-- End of Scroll Down Message and animation -->
 
-    <!-- Start of Shade - this is the css based gradient over the image for that cool effect -->
-    <div class="shade"></div><!-- End of Shade -->
+    <!-- Start of Shade - this is the css based gradient over the image for that cool effect add class="shade" to div -->
+    <div></div><!-- End of Shade -->
 
     <!-- Start of Background - displays a static image in replacement of video when on tablets and mobile devices -->
     <div id="background"></div><!-- End of Background -->
@@ -398,9 +398,9 @@
             <div class="content" id="Portfolio">
 
                 <h2 class="border wow fadeInRightBig" data-wow-offset="80" data-wow-duration="2s">Desarrollo iOS</h2>
-                <p>Desarrollador Certificado de <a target="_blank" href="http://mikerai.com/iOS5Certificate.pdf">iOS </a> acumulando m&aactue;s de 15 000 descargas a la fecha.</p>
+                <p>Desarrollador Certificado de <a target="_blank" href="http://mikerai.com/iOS5Certificate.pdf">iOS </a> acumulando m&aacute;s de 15 000 descargas a la fecha.</p>
                 <p>Ponte en contacto conmigo para hablar de tus ideas y de c&oacute;mo puedo transformarlas en aplicaciones para iOS.</p>
-                <p><a href="https://itunes.apple.com/us/artist/phiveleven-llc-mikerai/id461579017?l=en"><img class="w100" src="img/appStoreBig2.png" alt="Apple App Store"></a></p>
+                <p><a href="https://itunes.apple.com/us/artist/phiveleven-llc-mikerai/id461579017?l=en"><img class="wh100"  src="img/appStoreBig2.png" width="320" height="95" alt="Apple App Store"></a></p>
             
                 <div class="center-align">
 
@@ -409,7 +409,7 @@
                         <div class="infopanel">
                             <a href="img/port1.png" class="fancybox" rel="group2" ><div class="eye"><img src="img/port1.png" alt="Portfolio 1" /></div></a>
                             <h5>iCocteles</h5>
-                            <p>Convi&eacute;rtete en el mejor cantinero con las estupendas rectas de bebidas que encontrar&aactue;s en <a target="_blank" href="https://itunes.apple.com/mx/app/ecocktail/id515733229?l=en&mt=8">iCocteles</a></p>
+                            <p>Convi&eacute;rtete en el mejor cantinero con las estupendas rectas de bebidas que encontrar&aacute;s en <a target="_blank" href="https://itunes.apple.com/mx/app/ecocktail/id515733229?l=en&mt=8">iCocteles</a></p>
                         </div>
                     </div>
 
@@ -417,7 +417,7 @@
                         <div class="infopanel">
                             <a href="img/port2.png" class="fancybox" rel="group2" ><div class="eye"><img src="img/port2.png" alt="Portfolio 2" /></div></a>
                             <h5>ParkiMxtro</h5>
-                            <p>Programa tus recordatiors para que el parqu&iacute;metro no sea un dolore de cabeza con <a target="_blank" href="https://itunes.apple.com/mx/app/iparking-meter/id653821953?l=en&mt=8">ParquiMxtro</a></p>
+                            <p>Programa tus recordatiors para que el parqu&iacute;metro no sea un dolor de cabeza con <a target="_blank" href="https://itunes.apple.com/mx/app/iparking-meter/id653821953?l=en&mt=8">ParquiMxtro</a></p>
                         </div>
                     </div>
 
@@ -487,7 +487,7 @@
                     </p>
 
                     <p>
-                    <label>Tu mensaje/label>
+                    <label>Tu mensaje</label>
                     <textarea name="message" id="message" rows="8" cols="30" class="requiredField message"></textarea>
                     </p>
 
