--- a/new_look/Video Background Version/HTML Files/index_es.html
+++ b/new_look/Video Background Version/HTML Files/index_es.html
@@ -194,7 +194,7 @@
             <div class="content" id="About">
                     
                 <h2 class="border wow fadeInRightBig" data-wow-offset="80" data-wow-duration="2s">Acerca de mi</h2>
-                <p>Tomar en cuenta los m&aacute;s peque&ntilde;os detalles - met&oacute;dicamente - es escencial para que los proyectos puedan ser entregados a tiempo y bajo los m&aacute;s altos est&aacute;ndares de calidad. Personalmente, no lo har&iacute;a de otra manera despu&eacute;s de ver la diferencia que esto produce.</p>
+                <p>Tomar en cuenta los m&aacute;s peque&ntilde;os detalles - met&oacute;dicamente - es esencial para que los proyectos puedan ser entregados a tiempo y bajo los m&aacute;s altos est&aacute;ndares de calidad. Personalmente, no lo har&iacute;a de otra manera despu&eacute;s de ver la diferencia que esto produce.</p>
 
                 <blockquote class="wow fadeInLeftBig" data-wow-offset="80" data-wow-duration="3s"><p>Un sitio web mal desarrollado es como un vendedor malhumorado.</p></blockquote>
 
@@ -316,7 +316,7 @@
                     <h5>Speedcommerce</h5>
                     <p class="small">1 A&ntilde;o</p>
                     <div class="date">Septiembre 2013 - Presente</div>
-                    <p>Experto en comercio electr&oacute;. A cargo de un equipo de 4 Dise&ntilde;adores Gr&aacute;ficos y 12 Desarrolladores Web. L&iacute;der enfocado en Desarrollo de Interfaz de Usuario y Experiencia de Usuario. Experto en desarrollar proyctos pensando en la compatibilidad de los Navegadores. Soluciones orientas a sitios completamente responsivos.</p>
+                    <p>Experto en comercio electr&oacute;nico. A cargo de un equipo de 4 Dise&ntilde;adores Gr&aacute;ficos y 12 Desarrolladores Web. L&iacute;der enfocado en Desarrollo de Interfaz de Usuario y Experiencia de Usuario. Experto en desarrollar proyctos pensando en la compatibilidad de los Navegadores. Soluciones orientas a sitios completamente responsivos.</p>
                 </div><!-- End of 2/3 Column Last -->
 
                 <!-- Start of 2/3 Column Last -->
@@ -491,7 +491,7 @@
                     <textarea name="message" id="message" rows="8" cols="30" class="requiredField message"></textarea>
                     </p>
 
-                    <p><input name="submitted" id="submitted" value="Submit" class="submit" type="submit" /></p>
+                    <p><input name="submitted" id="submitted" value="Enviar" class="submit" type="submit" /></p>
 
                 </form>  <!--End Contact Form -->
 
