--- a/san-patricio-foundation-5.4.0/index.html
+++ b/san-patricio-foundation-5.4.0/index.html
@@ -9,12 +9,13 @@
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    
+<div class="header">
     <div class="row">
       <div class="large-12 columns">
         <h1>Welcome to Foundation</h1>
       </div>
     </div>
+</div>
     
     <div class="row">
       <div class="large-12 columns">
