--- a/san-patricio-foundation-5.4.0/index.html
+++ b/san-patricio-foundation-5.4.0/index.html
@@ -49,6 +49,9 @@
           </div>
           <div class="large-10 medium-10 small-8 columns right">
             <h1>Colegio San Patricio</h1>
+            <h3 class="hide-for-small">"Sembramos experiencias, cosechamos logros"</h3>
+          </div>
+          <div class="small-12 hide-for-large hide-for-medium columns center">
             <h3>"Sembramos experiencias, cosechamos logros"</h3>
           </div>
         </div>
