--- a/san-patricio-foundation-5.4.0/index.html
+++ b/san-patricio-foundation-5.4.0/index.html
@@ -11,7 +11,7 @@
   <body>
 <div class="off-canvas-wrap" data-offcanvas>
 <div class="inner-wrap">
-<div class="contain-to-grid sticky hide-for-medium hide-for-large">
+<div class="contain-to-grid sticky hide-for-medium-up">
   <nav class="tab-bar" data-topbar role="navigation" data-options="sticky_on: large">
       <section class="left-small">
         <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
@@ -51,7 +51,7 @@
             <h1>Colegio San Patricio</h1>
             <h3 class="hide-for-small">"Sembramos experiencias, cosechamos logros"</h3>
           </div>
-          <div class="small-12 hide-for-large hide-for-medium columns center">
+          <div class="small-12 hide-for-medium-up columns center">
             <h3>"Sembramos experiencias, cosechamos logros"</h3>
           </div>
         </div>
