--- a/san-patricio-foundation-5.4.0/index.html
+++ b/san-patricio-foundation-5.4.0/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <title>Colegio San Patricio</title>
     <link href="css/foundation.css" rel="stylesheet" type='text/css' />
     <link href="css/styles.css" rel="stylesheet" type='text/css' />
