--- a/new_look/Video Background Version/HTML Files/index_es.html
+++ b/new_look/Video Background Version/HTML Files/index_es.html
@@ -6,24 +6,11 @@
 <meta name=”viewport” content=”width=1024, minimal-ui”>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 
-<title>Miguel Angel Rodriguez Alvarez Icaza - UX Manager</title>
+<title>Miguel Angel Rodr&iacute;guez Alvarez Icaza - UX Manager</title>
     
 <!-- Loading of stylesheet for the design -->
-<link href="css/main.css" rel="stylesheet" type="text/css" />
-    
-<!-- This tells the page to watch for special styling for IE9 -->
-<!--[if IE 9 ]>    <html class= "ie9"> <![endif]-->
+<link rel="stylesheet" href="css/style.min.css">
 
-<!-- Important external stylesheets -->
-<link rel="stylesheet" href="css/owl.carousel.css">
-<link rel="stylesheet" href="css/owl.theme.css">
-<link rel="stylesheet" href="css/fontello.css">
-<link rel="stylesheet" href="css/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" /> 
-<link rel="stylesheet" href="css/jquery.fs.wallpaper.css" type="text/css" media="all" />
-<link rel="stylesheet" href="css/animate.css">
-
-<!-- Finally we will load the font from Google Fonts -->
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
 </head>
@@ -534,17 +521,17 @@ if (!window.jQuery) {
 }
 </script>    
 <!-- Now we load the JS files for the fancy things on the page -->
-<script type="text/javascript" src="js/owl.carousel.js"></script>
-<script type="text/javascript" src="js/jquery.fitvids.js"></script>
-<script type="text/javascript" src="js/jquery.fancybox.pack.js?v=2.1.5"></script>
-<script type="text/javascript" src="js/retina.js"></script>
+<script type="text/javascript" src="js/owl.carousel.min.js"></script>
+<script type="text/javascript" src="js/jquery.fitvids.min.js"></script>
+<script type="text/javascript" src="js/jquery.fancybox.pack.min.js?v=2.1.5"></script>
+<script type="text/javascript" src="js/retina.min.js"></script>
 <script type="text/javascript" src="js/jquery.scrollToTop.min.js"></script>
-<script type="text/javascript" src="js/jquery.fs.wallpaper.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="js/jquery.plusanchor.js"></script>
-<script type="text/javascript" src="js/jquery.knob.js"></script>
+<script type="text/javascript" src="js/jquery.fs.wallpaper.min.js"></script>
+<script type="text/javascript" src="js/jquery.easing.1.3.min.js"></script>
+<script type="text/javascript" src="js/jquery.plusanchor.min.js"></script>
+<script type="text/javascript" src="js/jquery.knob.min.js"></script>
 <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
-<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/app.min.js"></script>
 <script type="text/javascript" src="js/wow.min.js"></script>
 <!--<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
 <script>
