--- a/new_look/Video Background Version/HTML Files/index.html
+++ b/new_look/Video Background Version/HTML Files/index.html
@@ -365,7 +365,7 @@
                         
                         <div><a href="img/cacheBIG.png" class="fancybox" rel="group" title="<a target='_blank' href='http://cache.com'>View website</a>"><img src="img/cachesmall.png" alt="Cache Store" width="80%"/></a></div>
                         <!--<div><a href="img/hebBIG.png" class="fancybox" rel="group" title="<a target='_blank' href='http://heb.com'>View website</a>"><img src="img/hebsmall.png" alt="HEB" width="80%"/></a></div>-->
-                        <div><a href="img/huaweiBIG.png" class="fancybox" rel="group" title="<a target='_blank' href='http://gethuawei.com'>View website</a>"><img height="239" src="img/huaweismall.png" alt="Huawei" width="80%"/></a></div>
+                        <div><a href="img/huaweiBIG.png" class="fancybox" rel="group" title="<a target='_blank' href='http://gethuawei.com'>View website</a>"><img src="img/huaweismall.png" alt="Huawei" width="80%"/></a></div>
                         <div><a href="img/justiceBIG.png" class="fancybox" rel="group" title="<a target='_blank' href='http://shopjustice.com'>View website</a>"><img src="img/justicesmall.png" alt="Justice &amp; Brothers" width="80%"/></a></div>
                         <div><a href="img/navarreBIG.png" class="fancybox" rel="group" title="<a target='_blank' href='http://navarre.com'>View website</a>"><img src="img/navarresmall.png" alt="Navarre Corporation" width="80%"/></a></div>
                         <div><a href="img/nexcomBIG.png" class="fancybox" rel="group" title="<a target='_blank' href='http://mynavyexchange.com/'>View website</a>"><img src="img/nexcomsmall.png" alt="Navy Exchange Store" width="80%"/></a></div>
