--- a/new_look/Video Background Version/HTML Files/index.html
+++ b/new_look/Video Background Version/HTML Files/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="description" content="Hi! Welcome to my personal site. I'm a UX Manager and an iOS Developer. Contact me to talk about your project.">
     
 <!-- Meta Tag for responsive -->
 <meta name=”viewport” content=”width=1024, minimal-ui”>
