--- a/new_look/Video Background Version/HTML Files/index_es.html
+++ b/new_look/Video Background Version/HTML Files/index_es.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="description" content="Hola! Bienvenido a mi sitio personal. Soy Gerente de Experiencia del Usuario (UX). Ponte en contacto conmigo para hablar de tus proyectos.">
     
 <!-- Meta Tag for responsive -->
 <meta name=”viewport” content=”width=1024, minimal-ui”>
