Changed underscore for hyphen

--- a/new_look/Video Background Version/HTML Files/index.html
+++ b/new_look/Video Background Version/HTML Files/index.html
@@ -45,7 +45,7 @@
 
 <!-- HEADER SECTION -->
 <!-- Flag to switch site according to language -->
-<div><a href="index_es.html"><span class="flag es"></span></a></div>
+<div><a href="index-es.html"><span class="flag es"></span></a></div>
 <header>
     <!-- Start of Header Container - the content div that is a set width and centralized -->
     <div class="header-container">
