--- a/san-patricio-foundation-5.4.0/index.html
+++ b/san-patricio-foundation-5.4.0/index.html
@@ -92,7 +92,7 @@
                 <p>Ni&ntilde;os capaces y seguros har&aacute;n pr&oacute;spero al pa&iacute;s.</p>
                 <br>
                 <br>
-                <p class="center"><a href="#" class="button large success round">Cont&aacute;ctanos</a></p>
+                <p class="center"><a href="#" class="button large success">Cont&aacute;ctanos</a></p>
           </div>
 
           <div class="large-5 medium-5 small-12 pull-7 columns">
