--- a/minimalistic-experiment/index.html
+++ b/minimalistic-experiment/index.html
@@ -66,10 +66,16 @@
         </div>
       </div>
     </div>
-    
+
     <div class="row">
-      <div class="row mt64 mtb16" id="me">
-        <div class="large-12 medium-12 small-12 columns">
+      <div class="large-12 medium-12 small-12 columns mt64 mb32">
+        <p><img src="img/simple-is-beautiful.png" alt="Simple is beautiful text inside an image"></p>
+      </div>
+    </div>
+    
+    <div class="row" id="main">
+      <div class="row mtb16" id="me">
+        <div class="large-12 medium-12 small-12 columns mb32">
           <h2>About me</h2>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
@@ -83,7 +89,7 @@
       </div>
 
     <div class="row mtb16" id="skills">
-      <div class="large-12 medium-12 small-12 columns">
+      <div class="large-12 medium-12 small-12 columns mb32">
         <h2>My Skills</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
@@ -97,7 +103,7 @@
     </div>
 
     <div class="row mtb16" id="resume">
-      <div class="large-12 medium-12 small-12 columns">
+      <div class="large-12 medium-12 small-12 columns mb32">
         <h2>Resume</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
@@ -111,7 +117,7 @@
     </div>
 
     <div class="row mtb16" id="portfolio">
-      <div class="large-12 medium-12 small-12 columns">
+      <div class="large-12 medium-12 small-12 columns mb32">
         <h2>Porfolio</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
@@ -125,7 +131,7 @@
     </div>
 
     <div class="row mtb16" id="ios">
-      <div class="large-12 medium-12 small-12 columns">
+      <div class="large-12 medium-12 small-12 columns mb32">
         <h2>iOS Development</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
@@ -139,7 +145,7 @@
     </div>
 
     <div class="row mtb16" id="contact">
-      <div class="large-12 medium-12 small-12 columns">
+      <div class="large-12 medium-12 small-12 columns mb32">
         <h2>Contact me</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
@@ -152,8 +158,6 @@
       </div>
     </div>
 
-    </div>
-
     <div class="footer">
       <div class="row">
         <div class="large-3 medium-2 small-12 columns">
@@ -162,26 +166,27 @@
         <div class="large-9 medium-10 small-12 columns center">
           <div class="large-12 medium-12 small-12 columns">
             <div class="large-2 medium-2 small-12 columns">
-              <a href="">Me</a>
+              <a href="#me">Me</a>
             </div>
             <div class="large-2 medium-2 small-12 columns">
-              <a href="">Skills</a>
+              <a href="#skills">Skills</a>
             </div>
             <div class="large-2 medium-2 small-12 columns">
-              <a href="">Resume</a>
+              <a href="#resume">Resume</a>
             </div>
             <div class="large-2 medium-2 small-12 columns">
-              <a href="">Portfolio</a>
+              <a href="#portfolio">Portfolio</a>
             </div>
             <div class="large-2 medium-2 small-12 columns">
-              <a href="">iOS</a>
+              <a href="#ios">iOS</a>
             </div>
             <div class="large-2 medium-2 small-12 columns">
-              <a href="">Contact</a>
+              <a href="#contact">Contact</a>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </div>
