--- a/minimalistic-experiment/index.html
+++ b/minimalistic-experiment/index.html
@@ -9,67 +9,51 @@
     <link href="css/foundation.css" rel="stylesheet" type='text/css' />
     <link href="css/styles.css" rel="stylesheet" type='text/css' />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <style>p.simple {font-size: 12rem; font-family: Arial, sans-serif; font-weight: 700; color: #807F83;line-height: 10rem;text-align: center;}</style>
   </head>
   <body>
-<div class="off-canvas-wrap" data-offcanvas>
-<div class="inner-wrap">
-<div class="contain-to-grid sticky hide-for-medium-up">
-  <nav class="tab-bar" data-topbar role="navigation" data-options="sticky_on: large">
-      <section class="left-small">
-        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
-      </section>
-
-      <section class="middle tab-bar-section">
-        <h1 class="title"></h1>
-      </section>
-
-    </nav>
+<div class="row">
+  <div class="fixed center hide-for-medium-up">
+    <button class="menuB">Menu</button>
+      <nav>
+        <ul>
+          <li><a href="#me">Me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#ios">iOS</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+  </div>
 </div>
-
-    <aside class="left-off-canvas-menu">
-      <ul class="off-canvas-list">
-        <li><label>Menu</label></li>
-        <li><a href="#me">Me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#ios">iOS Development</a></li>
-        <li><a href="#contact">Contact me</a></li>
-      </ul>
-    </aside>
-
-    <section class="main-section">
-      <!-- content goes here -->
-    </section>
-
-  <a class="exit-off-canvas"></a>
 
     <div class="row">
       <div class="large-12 medium-12 columns menu hide-for-small center fixed lh-m">
         <div class="large-2 medium-2 columns bh1">
-          <a href="#me" class="button transparent">Me</a>
+          <a href="#me" class="transparent">Me</a>
         </div>
         <div class="large-2 medium-2 columns bh2">
-          <a href="#skills" class="button transparent">Skills</a>
+          <a href="#skills" class="transparent">Skills</a>
         </div>
         <div class="large-2 medium-2 columns bh3">
-          <a href="#resume" class="button transparent">Resume</a>
+          <a href="#resume" class="transparent">Resume</a>
         </div>
         <div class="large-2 medium-2 columns bh4">
-          <a href="#portfolio" class="button transparent">Portfolio</a>
+          <a href="#portfolio" class="transparent">Portfolio</a>
         </div>
         <div class="large-2 medium-2 columns bh5">
-          <a href="#ios" class="button transparent">iOS</a>
+          <a href="#ios" class="transparent">iOS</a>
         </div>
         <div class="large-2 medium-2 columns bh6">
-          <a href="#contact" class="button transparent">Contact</a>
+          <a href="#contact" class="transparent">Contact</a>
         </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="large-12 medium-12 small-12 columns mt64 mb32">
-        <p><img src="img/simple-is-beautiful.png" alt="Simple is beautiful text inside an image"></p>
+      <div class="large-12 medium-12 small-12 columns mt21f mb32">
+        <p class="simple">simple is beautiful.</p>
       </div>
     </div>
     
@@ -78,7 +62,11 @@
         <div class="large-12 medium-12 small-12 columns mb32">
           <h2>About me</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
+          <h1>Miguel Angel Rodriguez Alvarez Icaza</h1>
+
+          <h3>UX Manager</h3>
+
+            <p>Taking care of the smallest details — methodically — is essential for projects to be delivered on time and with the highest standards. I would personally not have it any other way after seeing the difference it makes.</p>
 
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
@@ -92,7 +80,7 @@
       <div class="large-12 medium-12 small-12 columns mb32">
         <h2>My Skills</h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet libero non erat eleifend eleifend. Etiam bibendum urna in nisl elementum, in commodo mauris tincidunt. Fusce consequat orci vel leo laoreet, vitae vehicula lectus ullamcorper. Etiam eget purus in ligula pellentesque tincidunt sit amet non tortor. Morbi eget magna nec quam feugiat fermentum. Nulla id est dolor. Ut a suscipit risus. Aenean dictum placerat urna, a condimentum nibh sagittis ut. Nunc sagittis tincidunt diam, non vehicula ex. Fusce eros nulla, pulvinar non felis a, tincidunt dictum magna. Phasellus scelerisque tempor ligula cursus condimentum. Aliquam erat volutpat.</p>
+        <p>E-commerce expert</p>
 
         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
@@ -187,14 +175,10 @@
         </div>
       </div>
     </div>
-    </div>
   </div>
-</div>
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script src="js/foundation/foundation.topbar.js"></script>
-    <script src="js/foundation/foundation.offcanvas.js"></script>
     <script src="js/scripts.js"></script>
     <script>
       $(document).foundation();
