--- a/minimalistic-experiment/index.html
+++ b/minimalistic-experiment/index.html
@@ -29,7 +29,7 @@
 </div>
 
     <div class="row">
-      <div class="large-12 medium-12 columns menu hide-for-small center fixed lh-m">
+      <div class="large-12 medium-12 columns menu hide-for-small center fixed lh-m" id="top-menu">
         <div class="large-2 medium-2 columns bh1">
           <a href="#me" class="transparent">Me</a>
         </div>
