--- a/minimalistic-experiment/index.html
+++ b/minimalistic-experiment/index.html
@@ -53,7 +53,7 @@
 
     <div class="row">
       <div class="large-12 medium-12 small-12 columns mt21f mb32">
-        <p class="simple">simple is beautiful.</p>
+        <p class="simple">simple is beautiful</p>
       </div>
     </div>
     
