--- a/minimalistic-experiment/index.html
+++ b/minimalistic-experiment/index.html
@@ -9,7 +9,6 @@
     <link href="css/foundation.css" rel="stylesheet" type='text/css' />
     <link href="css/styles.css" rel="stylesheet" type='text/css' />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <style>p.simple {font-size: 12rem; font-family: Arial, sans-serif; font-weight: 700; color: #807F83;line-height: 10rem;text-align: center;}</style>
   </head>
   <body>
 <div class="row">
@@ -147,29 +146,31 @@
     </div>
 
     <div class="footer">
-      <div class="row">
-        <div class="large-3 medium-2 small-12 columns">
-          <p class="center">&copy; Mikerai 2014</p>
-        </div>
-        <div class="large-9 medium-10 small-12 columns center">
-          <div class="large-12 medium-12 small-12 columns">
-            <div class="large-2 medium-2 small-12 columns">
-              <a href="#me">Me</a>
-            </div>
-            <div class="large-2 medium-2 small-12 columns">
-              <a href="#skills">Skills</a>
-            </div>
-            <div class="large-2 medium-2 small-12 columns">
-              <a href="#resume">Resume</a>
-            </div>
-            <div class="large-2 medium-2 small-12 columns">
-              <a href="#portfolio">Portfolio</a>
-            </div>
-            <div class="large-2 medium-2 small-12 columns">
-              <a href="#ios">iOS</a>
-            </div>
-            <div class="large-2 medium-2 small-12 columns">
-              <a href="#contact">Contact</a>
+      <div class="row mtb16">
+        <div class="large-12 columns">  
+          <div class="large-3 medium-2 small-12 columns">
+            <p class="center">&copy; Mikerai 2014</p>
+          </div>
+          <div class="large-9 medium-10 small-12 columns center">
+            <div class="large-12 medium-12 small-12 columns">
+              <div class="large-2 medium-2 small-12 columns">
+                <a href="#me">Me</a>
+              </div>
+              <div class="large-2 medium-2 small-12 columns">
+                <a href="#skills">Skills</a>
+              </div>
+              <div class="large-2 medium-2 small-12 columns">
+                <a href="#resume">Resume</a>
+              </div>
+              <div class="large-2 medium-2 small-12 columns">
+                <a href="#portfolio">Portfolio</a>
+              </div>
+              <div class="large-2 medium-2 small-12 columns">
+                <a href="#ios">iOS</a>
+              </div>
+              <div class="large-2 medium-2 small-12 columns">
+                <a href="#contact">Contact</a>
+              </div>
             </div>
           </div>
         </div>
