--- a/minimalistic-experiment/index.html
+++ b/minimalistic-experiment/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
     <title>Miguel Angel Rodríguez Alvarez Icaza, UX Manager</title>
